2009-07-08  Sam Steingold  <sds@gnu.org>

	add POSIX:WAIT (calls waitpid or wait4)
	* modules/syscalls/calls.c (rusage_to_lisp): do not call getrusage
	(USAGE): call getrusage here
	(WAIT): implement
	* modules/syscalls/posix.lisp (wait) [unix]: export
	* modules/syscalls/configure.in (wait4, sys/wait.h): test

2009-07-08  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (update-ansi-tests): use the common-lisp.net SVN
	repo instead of the GCL CVS

2009-07-07  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): pass --no-vc-files
	and --no-libtool to gnulib-tool; do not remove .cvsignore

2009-07-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (locale): use $(RMRF)

2009-07-07  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/demos/recurrence.lisp (draw-ppict):
	add (declare (compile)) to avoid stack overflow
	Reported by Reini Urban <rurban@x-ray.at>

2009-07-07  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_memfile.d (fill_memdump_header): zero-out header before filling.
	on x86_64 with MT there was 4 byte padding before _subr_tab_addr and
	this causes header validation failure (memcmp-ed) in find_memdump()
	(struct memdump_header_t): rename _per_thread_symvalues to
	_per_thread_symvalues_count (and use)

2009-07-06  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: guard the recently introduced jmp-related exports
	with "ifdef export_unwind_protect_macros", effectively disabling them

2009-07-06  Sam Steingold  <sds@gnu.org>

	* constsym.d (:OPERATION, :OPERANDS): add
	* error.d (end_error): complete :OPERATION, :OPERANDS
	for ARITHMETIC-ERROR and its subtypes
	* aridecl.d (divide_0, error_overflow, error_underflow):
	push :OPERATION and :OPERANDS
	* flo_konv.d (error_nan): ditto
	* intelem.d (BN_ueberlauf): ditto
	* intlog.d (I_I_ash_I): ditto
	* intmal.d (mal_ueberlauf): ditto
	* lfloat.d (error_LF_toolong): ditto
	Reported by Gabriel Dos Reis <gdr@integrable-solutions.net>

2009-07-06  Sam Steingold  <sds@gnu.org>
